--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ spring.datasource.driver-class-name = org.h2.Driver
 # show sql queries in console
 spring.jpa.show-sql = true
 
+org.h2.engine.Mode.getRegular().replaceInto = true	
+
+
 # update ddl when app starts
 spring.jpa.hibernate.ddl-auto = update
 
