--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
         <artifactId>prettytime</artifactId>
         <version>4.0.1.Final</version>
     </dependency>
+    
+    <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
+	</dependency>
 		
 		
 	</dependencies>
